# serializer version: 1
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.lac.lac]
  ReplayBuffer(
    act_buf=array([[ 0.70514154],
         [ 0.7680084 ],
         [-0.8422226 ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    device=device(type='cpu'),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.64386636,  0.765138  ,  0.21399839],
         [ 0.6086739 ,  0.79342055,  0.9030531 ],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[0.64386636, 0.765138  , 0.21399839],
         [0.6086739 , 0.79342055, 0.9030531 ],
         [0.5528652 , 0.8332707 , 1.3717852 ],
         ...,
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.7622525 , -0.76425564, -0.9220639 , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.lac.lac].1
  -0.25545182824134827
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.lac.lac].2
  0.09445282816886902
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.lac.lac].3
  0.2706877887248993
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.lac.lac].4
  0.7204982042312622
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.lac.lac].5
  -0.8725133538246155
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.latc.latc]
  ReplayBuffer(
    act_buf=array([[0.31346476],
         [0.9007353 ],
         [0.64298195],
         ...,
         [0.        ],
         [0.        ],
         [0.        ]], dtype=float32),
    device=device(type='cpu'),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.64611125,  0.76324326,  0.15524688],
         [ 0.6125944 ,  0.7903974 ,  0.86278963],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[0.64611125, 0.76324326, 0.15524688],
         [0.6125944 , 0.7903974 , 0.86278963],
         [0.54947615, 0.8355094 , 1.552035  ],
         ...,
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.7618536, -0.7571976, -0.9056088, ...,  0.       ,  0.       ,
          0.       ], dtype=float32),
    size=800,
  )
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.latc.latc].1
  -0.1356503963470459
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.latc.latc].2
  0.0918024331331253
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.latc.latc].3
  -0.29446977376937866
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.latc.latc].4
  -0.9297699332237244
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.latc.latc].5
  -0.8645297288894653
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.sac.sac]
  ReplayBuffer(
    act_buf=array([[ 0.66002095],
         [-0.7367002 ],
         [-0.7433324 ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    device=device(type='cpu'),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.6441252 ,  0.76492006,  0.2072303 ],
         [ 0.6181275 ,  0.78607786,  0.6704153 ],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[0.6441252 , 0.76492006, 0.2072303 ],
         [0.6181275 , 0.78607786, 0.6704153 ],
         [0.57199395, 0.82025784, 1.1484739 ],
         ...,
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.76219094, -0.7633339 , -0.8635062 , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.sac.sac].1
  -0.5087029933929443
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.sac.sac].2
  -0.6732438802719116
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.sac.sac].3
  0.7057369947433472
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.sac.sac].4
  -0.16019846498966217
# ---
# name: TestTorchAlgos.test_reproducibility[stable_learning_control.algos.pytorch.sac.sac].5
  -0.03290830925107002
# ---
